# extract-loads3

./: README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: publish.yaml
src/: main.py
src/extract_load_s3/: main.py
src/extract_load_s3/sources/: sftp_source.py
src/upload/: s3_upload.py  validation.py
