[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extract_load_s3"
version = "1.0.3"
description = "Unified data ingestion framework to move datasets from SFTP/Oracle/Postgres/Snowflake to S3."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.41.5",
    "paramiko>=4.0.0",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "setuptools>=80.9.0",
    "twine>=6.2.0",
]
